@@ -1,3 +1,5 @@
+07-04-17 : You can now hold any cursed item, so a cleric may uncurse it.
+
 07-04-17 : Weapons' magical status is no longer ignored in damage immunity
            calculations.
 
